Opened 12 years ago

Closed 12 years ago

#1077 closed defect (fixed)

sunras enc: broken output with -vf vflip

Reported by: ami_stuff Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: sunras
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description

http://ffmpeg.org/trac/ffmpeg/attachment/ticket/1059/599.png

"-coder raw" works ok

C:\>ffmpeg -i 599.png -vf vflip out.ras
ffmpeg version N-38622-g1eabd71 Copyright (c) 2000-2012 the FFmpeg developers
  built on Mar  7 2012 00:18:03 with gcc 4.6.2
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-ru
ntime-cpudetect --enable-avisynth --enable-bzlib --enable-frei0r --enable-libope
ncore-amrnb --enable-libopencore-amrwb --enable-libfreetype --enable-libgsm --en
able-libmp3lame --enable-libopenjpeg --enable-librtmp --enable-libschroedinger -
-enable-libspeex --enable-libtheora --enable-libvo-aacenc --enable-libvo-amrwben
c --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --enable-
libxvid --enable-zlib
  libavutil      51. 42.100 / 51. 42.100
  libavcodec     54. 10.100 / 54. 10.100
  libavformat    54.  2.100 / 54.  2.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 63.100 /  2. 63.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0.  7.100 /  0.  7.100
  libpostproc    52.  0.100 / 52.  0.100
Input #0, image2, from '599.png':
  Duration: 00:00:00.04, start: 0.000000, bitrate: N/A
    Stream #0:0: Video: png, rgb24, 599x412, 25 tbr, 25 tbn, 25 tbc
Incompatible pixel format 'rgb24' for codec 'sunrast', auto-selecting format 'bg
r24'
[buffer @ 02161A80] w:599 h:412 pixfmt:rgb24 tb:1/1000000 sar:0/1 sws_param:
[vflip @ 02161180] auto-inserting filter 'auto-inserted scale 0' between the fil
ter 'src' and the filter 'Parsed_vflip_0'
[scale @ 02162A20] w:599 h:412 fmt:rgb24 -> w:599 h:412 fmt:bgr24 flags:0x4
Output #0, image2, to 'out.ras':
  Metadata:
    encoder         : Lavf54.2.100
    Stream #0:0: Video: sunrast, bgr24, 599x412, q=2-31, 200 kb/s, 90k tbn, 25 t
bc
Stream mapping:
  Stream #0:0 -> #0:0 (png -> sunrast)
Press [q] to stop, [?] for help
frame=    1 fps=  0 q=0.0 Lsize=       0kB time=00:00:00.04 bitrate=   0.0kbits/
s
video:0kB audio:0kB global headers:0kB muxing overhead -100.000000%

Change History (2)

comment:1 by Elon Musk, 12 years ago

Component: undeterminedavcodec
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Stefano Sabatini, 12 years ago

Analyzed by developer: set
Keywords: sunras added
Resolution: fixed
Status: openclosed

Should be fixed in:

commit 11642cd16f1b18232bdeca4cddb2dd7c11cbd2f3
Author: Stefano Sabatini <stefasab@gmail.com>
Date:   Sun Mar 18 16:55:53 2012 +0100

    lavc/sunrastenc: consider cases with linesize < 0
    
    Make sunrast_image_write_image() deal with cases when linesize is < 0.
    Fix trac ticket #1077.
Note: See TracTickets for help on using tickets.