lavc/sunrastenc: consider cases with linesize < 0

Make sunrast_image_write_image() deal with cases when linesize is < 0.
Fix trac ticket #1077.